--- a/.github/workflows/scrape.yaml
+++ b/.github/workflows/scrape.yaml
@@ -32,13 +32,14 @@ jobs:
       - name: 📦 Install pipenv
         run: |
           python -m pip install --upgrade pipenv wheel
+          pip install -r requirements.txt
 
-      - name: 🔄 Check pipenv cache before installing dependencies
-        id: cache-pipenv
-        uses: actions/cache@v4
-        with:
-          path: ~/.local/share/virtualenvs
-          key: ${{ runner.os }}-pipenv-${{ hashFiles('**/Pipfile.lock') }}
+      # - name: 🔄 Check pipenv cache before installing dependencies
+      #   id: cache-pipenv
+      #   uses: actions/cache@v4
+      #   with:
+      #     path: ~/.local/share/virtualenvs
+      #     key: ${{ runner.os }}-pipenv-${{ hashFiles('**/Pipfile.lock') }}
 
       # - name: 🛠 Install dependencies
       #   if: steps.cache-pipenv.outputs.cache-hit != 'true'
