--- a/.github/workflows/scrape.yaml
+++ b/.github/workflows/scrape.yaml
@@ -32,7 +32,7 @@ jobs:
       - name: 📦 Install pipenv
         run: |
           python -m pip install --upgrade pipenv wheel
-          pip install -r requirements.txt
+          pipenv install --deploy --dev
 
       # - name: 🔄 Check pipenv cache before installing dependencies
       #   id: cache-pipenv
